--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@ ExportedObj/
 *.pdb
 *.opendb
 
+#MacOS unnecessary .DS_Store files
+.DS_Store
+
 # Unity3D generated meta files
 *.pidb.meta
 *.pdb.meta
